--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </div>
   </nav>
       <div class="jumbotron"  style="padding:40px;">
-        <h1>About Us</h1>
+        <h1>About Us [Morel Sami]</h1>
         <strong><p>IBT Learning is a digital economy Instructor-led and career-oriented Bootcamp offering training to working professionals, career changers, and corporate institutions across industries and sectors. IBT Learning is an official training partner of IBM, AWS Partner Network, Linux Professional Institute, Comptia, EC-Council, and more. </p></strong>
 
         <strong><p>Learn the skills that companies are looking for and land a job that you will love. At IBT, we are outcome driven and are not merely training you to bag certifications, we are training you for successful careers in tech.</p></strong>
